--- a/README.textile
+++ b/README.textile
@@ -6,9 +6,10 @@ h2. Instructions
 
 # Download and install "extension":https://github.com/simonhildebrandt/JIRA2Harvest/raw/master/JIRA2Harvest.crx
 # Set your username and password in the extension options
-# Watch the extension badge (Harvest icon in the corner) update with your current timer.
-# Click badge to see all your timers for the day (or to see the current error, probably caused by mistyped credentials)
-# Switch timers by clicking on them
-# Watch for the 'angry' Harvest icon - you have no timer currently running!
+# Open a JIRA
+# Watch the Harvest buttons appear and initialise
+# Start/stop a timer mapped to this JIRA.
 
-_Developed at "Red Ant":http://redant.com.au, where Harvest makes our lives better. :)_
+Timers are created based on the 'Fix Version' of the ticket, so it's assumed that you always have 
+
+_Developed at "Red Ant":http://redant.com.au, where Harvest and JIRA make our lives better. :)_
